syntax = "proto3";

package internal_message.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// Internal Message Service
service InternalMessageService {
  // Query internal message list
  rpc ListMessage(pagination.PagingRequest) returns (ListInternalMessageResponse) {}

  // Query internal message details
  rpc GetMessage(GetInternalMessageRequest) returns (InternalMessage) {}

  // Create internal message
  rpc CreateMessage(CreateInternalMessageRequest) returns (InternalMessage) {}

  // Update internal message
  rpc UpdateMessage(UpdateInternalMessageRequest) returns (google.protobuf.Empty) {}

  // Delete internal message
  rpc DeleteMessage(DeleteInternalMessageRequest) returns (google.protobuf.Empty) {}


  // Send message
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);

  // Revoke message
  rpc RevokeMessage(RevokeMessageRequest) returns (google.protobuf.Empty);
}

// Internal Message
message InternalMessage {
  // Message Status
  enum Status {
    DRAFT = 0;      // Draft
    PUBLISHED = 1;  // Published/Sent
    SCHEDULED = 2;  // Scheduled publishing
    REVOKED = 3;    // Revoked
    ARCHIVED = 5;   // Archived (typically system-level archiving)
    DELETED = 6;    // Deleted (soft delete)
  }

  // Message Type
  enum Type {
    NOTIFICATION = 0; // Notification
    PRIVATE = 1; // Private message
    GROUP = 2; // Group chat
  }

  optional uint32 id = 1 [
    json_name = "id",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = { description: "Message ID" }
  ]; // Message ID

  optional string title = 2 [
    json_name = "title",
    (gnostic.openapi.v3.property) = { description: "Message title" }
  ]; // Message title

  optional string content = 3 [
    json_name = "content",
    (gnostic.openapi.v3.property) = { description: "Message content" }
  ]; // Message content

  optional Status status = 4 [
    json_name = "status",
    (gnostic.openapi.v3.property) = { description: "Message status" }
  ]; // Message status

  optional Type type = 5 [
    json_name = "type",
    (gnostic.openapi.v3.property) = { description: "Message type" }
  ]; // Message type

  optional uint32 sender_id = 6 [
    json_name = "senderId",
    (gnostic.openapi.v3.property) = { description: "Sender ID (user ID, 0 for system messages)" }
  ]; // Sender ID (user ID, 0 for system messages)

  optional string sender_name = 7 [
    json_name = "senderName",
    (gnostic.openapi.v3.property) = { description: "Sender name" }
  ]; // Sender name

  optional uint32 category_id = 8 [
    json_name = "categoryId",
    (gnostic.openapi.v3.property) = { description: "Category ID" }
  ]; // Category ID

  optional string category_name = 9 [
    json_name = "categoryName",
    (gnostic.openapi.v3.property) = { description: "Category name" }
  ]; // Category name

  optional uint32 tenant_id = 40 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "Tenant ID, 0 represents system global role"}
  ];  // Tenant ID, 0 represents system global role
  optional string tenant_name = 41 [
    json_name = "tenantName",
    (gnostic.openapi.v3.property) = {description: "Tenant name"}
  ];  // Tenant name

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "Creator ID"}]; // Creator ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "Updater ID"}]; // Updater ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "Deleter user ID"}]; // Deleter user ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "Created time"}];// Created time
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "Updated time"}];// Updated time
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "Deleted time"}];// Deleted time
}

// List Internal Messages - Response
message ListInternalMessageResponse {
  repeated InternalMessage items = 1;
  uint64 total = 2;
}

// Get Internal Message Details - Request
message GetInternalMessageRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "View field filter, used to control which fields to return"
    }
  ]; // View field filter, used to control which fields to return
}

// Create Internal Message - Request
message CreateInternalMessageRequest {
  InternalMessage data = 1;
}

// Update Internal Message - Request
message UpdateInternalMessageRequest {
  uint32 id = 1;

  InternalMessage data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "List of fields to update",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // List of fields to update

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "If set to true, the resource will be created (inserted) if it does not exist, and the `updateMask` field will be ignored in this case."},
    json_name = "allowMissing"
  ]; // If set to true, the resource will be created (inserted) if it does not exist, and the `updateMask` field will be ignored in this case.
}

// Delete Internal Message - Request
message DeleteInternalMessageRequest {
  uint32 id = 1;
}

message SendMessageRequest {
  InternalMessage.Type type = 1 [
    json_name = "type",
    (gnostic.openapi.v3.property) = { description: "Message type" }
  ]; // Message type

  optional uint32 recipient_user_id = 2 [
    json_name = "recipientUserId",
    (gnostic.openapi.v3.property) = { description: "Recipient user ID" }
  ]; // Recipient user ID

  optional uint32 conversation_id = 3 [
    json_name = "conversationId",
    (gnostic.openapi.v3.property) = { description: "Conversation ID" }
  ]; // Conversation ID

  optional uint32 category_id = 4 [
    json_name = "categoryId",
    (gnostic.openapi.v3.property) = { description: "Category ID" }
  ]; // Category ID

  repeated uint32 target_user_ids = 6 [
    json_name = "targetUserIds",
    (gnostic.openapi.v3.property) = { description: "List of targeted user IDs" }
  ]; // List of targeted user IDs

  optional bool target_all = 7 [
    json_name = "targetAll",
    (gnostic.openapi.v3.property) = { description: "Send to all users flag" }
  ]; // Send to all users flag

  optional string title = 10 [
    json_name = "title",
    (gnostic.openapi.v3.property) = { description: "Message title" }
  ]; // Message title

  string content = 11 [
    json_name = "content",
    (gnostic.openapi.v3.property) = { description: "Message content" }
  ]; // Message content
}

message SendMessageResponse {
  uint32 message_id = 1 [
    json_name = "messageId",
    (gnostic.openapi.v3.property) = { description: "Message ID" }
  ]; // Message ID
}

message RevokeMessageRequest {
  uint32 message_id = 1 [
    json_name = "messageId",
    (gnostic.openapi.v3.property) = { description: "Message ID" }
  ]; // Message ID

  uint32 user_id = 2 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = { description: "User ID" }
  ]; // User ID
}
